Support ci_ubuntu_additional_apt_packages and additional_latex_preamble

--- a/templates/makedoc.g.j2
+++ b/templates/makedoc.g.j2
@@ -19,6 +19,9 @@ AutoDoc( rec(
     gapdoc := rec(
         LaTeXOptions := rec(
             LateExtraPreamble := """
+                {%- if additional_latex_preamble is defined %}
+                {{ additional_latex_preamble | trim | indent(16) }}
+                {%- endif %}
             """,
         ),
     ),
