Support the case of ci_ubuntu_additional_apt_packages not set

--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -26,7 +26,7 @@ jobs:
           cd /home/gap/.gap/pkg/
           sudo apt update
           sudo apt dist-upgrade -y
-          sudo apt install -y texlive-latex-extra{% for package in ci_ubuntu_additional_apt_packages %} {{ package }}{% endfor %}
+          sudo apt install -y texlive-latex-extra{% if ci_ubuntu_additional_apt_packages is defined %}{% for package in ci_ubuntu_additional_apt_packages %} {{ package }}{% endfor %}{% endif %}
           git clone --depth 1 https://github.com/homalg-project/AutoDoc.git
 {%- for package in ci_additional_packages %}
           git clone --depth 1 https://github.com/homalg-project/{{ package }}.git
