--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -17,7 +17,7 @@ test: doc
 test-tabs:
 	! grep -RP "\t" examples/ gap/
 
-test-doc:
+test-doc: doc
 	gap makedoc_with_overfull_hbox_warnings.g | perl -pe 'END { exit $$status } $$status=1 if /#W/;'
 
 test-with-coverage: doc
