--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -5,7 +5,7 @@ doc: doc/manual.six
 doc/manual.six: makedoc.g \
 		PackageInfo.g \
 		doc/Doc.autodoc \
-		gap/*.gd gap/*.gi examples/*.g
+		$(wildcard gap/*.gd gap/*.gi examples/*.g examples/*/*.g)
 			gap makedoc.g
 
 clean:
