--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -21,6 +21,8 @@ test-tabs:
 	! grep -RP "\t" examples/ gap/
 
 test-doc: doc
+	cp -aT doc/ doc_tmp/
+	cd doc_tmp && ./clean
 	gap --quitonbreak makedoc_with_overfull_hbox_warnings.g | perl -pe 'END { exit $$status } $$status=1 if /#W/;'
 
 test-with-coverage: doc
