--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -7,8 +7,7 @@ doc: doc/manual.six
 
 doc/manual.six: makedoc.g \
 		PackageInfo.g \
-		doc/Doc.autodoc \
-		$(wildcard gap/*.gd gap/*.gi examples/*.g examples/*/*.g)
+		$(wildcard doc/*.autodoc gap/*.gd gap/*.gi examples/*.g examples/*/*.g)
 			gap makedoc.g
 
 clean:
