--- a/templates/.codecov.yml.j2
+++ b/templates/.codecov.yml.j2
@@ -1,6 +1,6 @@
 codecov:
   disable_default_path_fixes: true
 fixes:
-  - "/home/gap/.gap/pkg/{{ package_name }}/::"
+  - "/home/gap/.gap/pkg/{{ package.name }}/::"
 ignore:
   - "home/"
