--- a/templates/000_LoadPackage.tst.j2
+++ b/templates/000_LoadPackage.tst.j2
@@ -1,16 +1,16 @@
 #
-# {{ package_name }}: {{ package_description }}
+# {{ package.name }}: {{ package.description }}
 #
 # This file tests if the package can be loaded without errors or warnings.
 #
 gap> package_loading_info_level := InfoLevel( InfoPackageLoading );;
 gap> SetInfoLevel( InfoPackageLoading, PACKAGE_ERROR );;
-gap> LoadPackage( "{{ package_name }}", false );
+gap> LoadPackage( "{{ package.name }}", false );
 true
 gap> SetInfoLevel( InfoPackageLoading, PACKAGE_INFO );;
-gap> LoadPackage( "{{ package_name }}" );
+gap> LoadPackage( "{{ package.name }}" );
 true
 gap> SetInfoLevel( InfoPackageLoading, package_loading_info_level );;
-{% if has_HOMALG_IO is defined and has_HOMALG_IO %}
+{% if package.has_HOMALG_IO is defined and package.has_HOMALG_IO %}
 gap> HOMALG_IO.show_banners := false;;
 {% endif %}
