--- a/templates/LICENSE.j2
+++ b/templates/LICENSE.j2
@@ -1,9 +1,9 @@
-{{ package_name }} is free software; you can redistribute and/or modify
+{{ package.name }} is free software; you can redistribute and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or (at
 your opinion) any later version.
 
-{{ package_name }} is distributed in the hope that it will be useful, 
+{{ package.name }} is distributed in the hope that it will be useful, 
 but WITHOUT ANY WARRANTY; without even the implied warranty of 
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 General Public License for more details.
