--- a/templates/makedoc_with_overfull_hbox_warnings.g.j2
+++ b/templates/makedoc_with_overfull_hbox_warnings.g.j2
@@ -1,5 +1,5 @@
 #
-# {{ package_name }}: {{ package_description }}
+# {{ package.name }}: {{ package.description }}
 #
 # This file is a script which compiles the package manual and prints overfull hbox warnings.
 #
@@ -17,8 +17,8 @@ AutoDoc( rec(
     gapdoc := rec(
         LaTeXOptions := rec(
             LateExtraPreamble := """
-                {%- if additional_latex_preamble is defined %}
-                {{ additional_latex_preamble | trim | indent(16) }}
+                {%- if package.additional_latex_preamble is defined %}
+                {{ package.additional_latex_preamble | trim | indent(16) }}
                 {%- endif %}
                 {% raw %}% Many thanks to https://tex.stackexchange.com/questions/22466/how-to-convince-fancyvrb-to-give-overfull-warnings/534486#534486
                 \makeatletter
