--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -33,7 +33,7 @@ test-spacing:
 	for filename in gap/*; do \
 		echo $$filename; \
 		grep -E '[^ ] +$$' $$filename && echo "Trailing whitespace found" && exit 1; \
-		echo "LoadPackage(\"{{ package_name }}\"); SizeScreen([4096]); func := ReadAsFunction(\"$$filename\"); FileString(\"gap_spacing\", PrintString(func));" | gap --quitonbreak --banner; \
+		echo "LoadPackage(\"{{ package.name }}\"); SizeScreen([4096]); func := ReadAsFunction(\"$$filename\"); FileString(\"gap_spacing\", PrintString(func));" | gap --quitonbreak --banner; \
 		echo -e "\033[0m"; \
 		cat "gap_spacing" | sed 's/^function ( ) //g' | sed 's/ return; end$$//g' | sed 's/;/;\n/g' > modified_gap_spacing; \
 		cat "$$filename" | grep -v "^ *[#]" | sed 's/^ *//' | grep -v "^$$" | tr "\n" " " | sed "s/;/;\n/g" | head -c -1 > modified_custom_spacing; \
