--- a/templates/testall.g.j2
+++ b/templates/testall.g.j2
@@ -1,5 +1,5 @@
 #
-# {{ package_name }}: {{ package_description }}
+# {{ package.name }}: {{ package.description }}
 #
 # This file runs package tests. It is also referenced in the package
 # metadata in PackageInfo.g.
@@ -11,6 +11,6 @@ options := rec(
     ),
 );
 
-TestDirectory( DirectoriesPackageLibrary( "{{ package_name }}", "tst" ), options );
+TestDirectory( DirectoriesPackageLibrary( "{{ package.name }}", "tst" ), options );
 
 FORCE_QUIT_GAP( 1 ); # if we ever get here, there was an error
