--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -47,4 +47,4 @@ test-spacing:
 	rm spacing_diff
 	rm spacing_diff_no_blanks
 
-ci-test: test-tabs test-spacing test-doc test-with-coverage
+ci-test: test-tabs {% if not (package.tests_only_basic | default(false)) %}test-spacing test-doc {% endif %}test-with-coverage
