--- a/templates/makefile.j2
+++ b/templates/makefile.j2
@@ -30,9 +30,9 @@ test-with-coverage: doc
 
 test-spacing:
 	grep -R "[^ []  " gap/*.gi && echo "Duplicate spaces found" && exit 1 || exit 0
+	grep -RE '[^ ] +$$' gap/* && echo "Trailing whitespace found" && exit 1 || exit 0
 	for filename in gap/*; do \
 		echo $$filename; \
-		grep -E '[^ ] +$$' $$filename && echo "Trailing whitespace found" && exit 1; \
 		echo "LoadPackage(\"{{ package.name }}\"); SizeScreen([4096]); func := ReadAsFunction(\"$$filename\"); FileString(\"gap_spacing\", PrintString(func));" | gap --quitonbreak --banner; \
 		echo -e "\033[0m"; \
 		cat "gap_spacing" | sed 's/^function ( ) //g' | sed 's/ return; end$$//g' | sed 's/;/;\n/g' > modified_gap_spacing; \
