--- a/templates/Tests.yml.j2
+++ b/templates/Tests.yml.j2
@@ -29,7 +29,7 @@ jobs:
           sudo apt dist-upgrade -y
           sudo apt install -y texlive-latex-extra{% for apt_package in (ci_ubuntu_additional_apt_packages | default([ ])) %} {{ apt_package }}{% endfor %}
           git clone --depth 1 https://github.com/gap-packages/AutoDoc.git
-        {%- for additional_package in (ci_additional_packages_to_clone | default([ ])) %}
+        {%- for additional_package in ci_additional_repositories_enriched %}
           git clone --depth 1 https://github.com/homalg-project/{{ additional_package }}.git
         {%- endfor %}
           # set SOURCE_DATE_EPOCH for reproducible PDFs
