--- a/templates/makedoc.g.j2
+++ b/templates/makedoc.g.j2
@@ -27,7 +27,7 @@ AutoDoc( rec(
         ),
     ),
     scaffold := rec(
-        entities := [ "homalg", "CAP" ],
+        entities := [ "homalg", "CAP"{% if package.needed_other_repositories is defined and "QPA2" in package.needed_other_repositories %}, "QPA"{% endif %} ],
     ),
 ) );
 
