Always use master branch for status badge

--- a/templates/homalg-project.github.io_used_by_table.j2
+++ b/templates/homalg-project.github.io_used_by_table.j2
@@ -12,7 +12,7 @@
   {%- else -%}
     Not available
   {%- endif %} | {# -#}
-  [![Build Status](https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg)](https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests) | {# -#}
+  [![Build Status](https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg?branch=master)](https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests) | {# -#}
   [![Code Coverage](https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg)](https://codecov.io/gh/homalg-project/{{ package.name }}) | {# -#}
   {{ package.status }} |
 {% endfor %}
