--- a/templates/README.md_FOOTER.j2
+++ b/templates/README.md_FOOTER.j2
@@ -22,13 +22,13 @@
 {% endif -%}
 {% endif %}
 {% if meta_package is defined -%}
-[tests-img]: https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg
+[tests-img]: https://github.com/homalg-project/{{ meta_package.name }}/workflows/Tests/badge.svg?branch=master
 [tests-url]: https://github.com/homalg-project/{{ meta_package.name }}/actions?query=workflow%3ATests
 
 [codecov-img]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}/branch/master/graph/badge.svg
 [codecov-url]: https://codecov.io/gh/homalg-project/{{ meta_package.name }}
 {% else %}
-[tests-img]: https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg
+[tests-img]: https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg?branch=master
 [tests-url]: https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests
 
 [codecov-img]: https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
