--- a/templates/homalg-project.github.io_used_by_table.j2
+++ b/templates/homalg-project.github.io_used_by_table.j2
@@ -6,14 +6,31 @@
 | [{{ package.name }}](https://github.com/homalg-project/{{ package.name }}) | {# -#}
   {{ package.description }} | {# -#}
   {%- if package.has_html_docu -%}
-    [![HTML stable documentation](https://img.shields.io/badge/HTML-stable-blue.svg)](https://homalg-project.github.io/{{ meta_package.name }}/{{ package.name }}/doc/chap0_mj.html)
+    [![HTML stable documentation][docs-{{ package.name }}-img]][docs-{{ package.name }}-url]
   {%- elif package.has_pdf_docu -%}
-    [![PDF development documentation](https://img.shields.io/badge/PDF-dev-blue.svg)](https://raw.githubusercontent.com/homalg-project/{{ meta_package.name }}/doc/{{ package.name }}.pdf)
+    [![PDF development documentation][docs-{{ package.name }}-img]][docs-{{ package.name }}-url]
   {%- else -%}
     Not available
   {%- endif %} | {# -#}
-  [![Build Status](https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg?branch=master)](https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests) | {# -#}
-  [![Code Coverage](https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg)](https://codecov.io/gh/homalg-project/{{ package.name }}) | {# -#}
+  [![Build Status][tests-{{ package.name }}-img]][tests-{{ package.name }}-url] | {# -#}
+  [![Code Coverage][codecov-{{ package.name }}-img]][codecov-{{ package.name }}-url] | {# -#}
   {{ package.status }} |
 {% endfor %}
 
+{% for package in packages_enriched %}
+{% if package.has_html_docu %}
+[docs-{{ package.name }}-img]: https://img.shields.io/badge/HTML-stable-blue.svg
+[docs-{{ package.name }}-url]: https://homalg-project.github.io/{{ package.name }}/doc/chap0_mj.html
+
+{% elif package.has_pdf_docu %}
+[docs-{{ package.name }}-img]: https://img.shields.io/badge/PDF-dev-blue.svg
+[docs-{{ package.name }}-url]: https://raw.githubusercontent.com/homalg-project/doc/{{ package.name }}.pdf
+
+{% endif %}
+[tests-{{ package.name }}-img]: https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg?branch=master
+[tests-{{ package.name }}-url]: https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests
+
+[codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
+[codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.name }}
+
+{% endfor %}
