Only show workflows of master

--- a/templates/homalg-project.github.io_used_by_table.j2
+++ b/templates/homalg-project.github.io_used_by_table.j2
@@ -28,7 +28,7 @@
 
 {% endif %}
 [tests-{{ package.name }}-img]: https://github.com/homalg-project/{{ package.name }}/workflows/Tests/badge.svg?branch=master
-[tests-{{ package.name }}-url]: https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests
+[tests-{{ package.name }}-url]: https://github.com/homalg-project/{{ package.name }}/actions?query=workflow%3ATests+branch%3Amaster
 
 [codecov-{{ package.name }}-img]: https://codecov.io/gh/homalg-project/{{ package.name }}/branch/master/graph/badge.svg
 [codecov-{{ package.name }}-url]: https://codecov.io/gh/homalg-project/{{ package.name }}
