--- a/templates/homalg-project.github.io_subpackage_table.j2
+++ b/templates/homalg-project.github.io_subpackage_table.j2
@@ -1,4 +1,4 @@
-### Packages of [{{ meta_package.name }}](https://github.com/homalg-project/{{ meta_package.name }}):
+## Packages of [{{ meta_package.name }}](https://github.com/homalg-project/{{ meta_package.name }}):
 
 | Name | Description | Documentation | Status |
 | ---- | ----------- | ------------- | ------ |
