--- a/templates/homalg-project.github.io_used_by_table.j2
+++ b/templates/homalg-project.github.io_used_by_table.j2
@@ -1,4 +1,4 @@
-### Packages based on [{{ meta_package.name }}](https://github.com/homalg-project/{{ meta_package.name }}):
+## Packages based on [{{ meta_package.name }}](https://github.com/homalg-project/{{ meta_package.name }}):
 
 | Name | Description | Documentation | Build Status | Code Coverage | Status |
 | ---- | ----------- | ------------- | ------------ | ------------- | ------ |
