--- a/templates/make_dist.sh.j2
+++ b/templates/make_dist.sh.j2
@@ -1,13 +1,15 @@
 #!/bin/bash
 
+set -e
+
 {% if is_meta_package %}
 packages="{% for subpackage in subpackages %}{{ subpackage.name }} {% endfor %}"
 
 base_dir="$PWD"
 
 for pkg in ${packages}; do
-  ./release-gap-package --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-file ${base_dir}/gh-pages/update.g $@
+  ./release-gap-package --skip-existing-release --srcdir ${base_dir}/${pkg} --webdir ${base_dir}/gh-pages/${pkg} --update-file ${base_dir}/gh-pages/update.g $@
 done
 {% else %}
-./release-gap-package $@
+./release-gap-package --skip-existing-release $@
 {% endif %}
