--- a/templates/README.md_HEADER.j2
+++ b/templates/README.md_HEADER.j2
@@ -7,8 +7,8 @@
 | ------------ | ------------- |
 | [![Build Status][tests-img]][tests-url] | [![Code Coverage][codecov-img]][codecov-url] |
 {% else %}
-| Documentation | Build Status{% if meta_package is defined %} of [{{ meta_package.name }}](/../../){% endif %} | Code Coverage{% if meta_package is defined %} of [{{ meta_package.name }}](/../../){% endif %} | Latest Release |
-| ------------- | ------------ | ------------- | -------------- |
-| [![HTML stable documentation][html-img]][html-url] [![PDF stable documentation][pdf-img]][pdf-url] | [![Build Status][tests-img]][tests-url] | [![Code Coverage][codecov-img]][codecov-url] | [![version][version-img]][version-url] [![date][date-img]][date-url] |
+| Documentation | Latest Release | Build Status{% if meta_package is defined %} of [{{ meta_package.name }}](/../../){% endif %} | Code Coverage{% if meta_package is defined %} of [{{ meta_package.name }}](/../../){% endif %} |
+| ------------- | -------------- | ------------ | ------------- |
+| [![HTML stable documentation][html-img]][html-url] [![PDF stable documentation][pdf-img]][pdf-url] | [![version][version-img]][version-url] [![date][date-img]][date-url] | [![Build Status][tests-img]][tests-url] | [![Code Coverage][codecov-img]][codecov-url] |
 {% endif %}
 
